--- a/app/views/adj.pug
+++ b/app/views/adj.pug
@@ -1,27 +1,26 @@
 extends layout
 
 block content
-  div(ng-controller='AdjListController as listCtrl')
-    div(ng-hide='adjList')
-      h1.text-center loading...
-    .panel.list(ng-if='adjList')
+  div(ng-controller='ListController as listCtrl')
+    .panel.list
       nav.panel-heading
         .text-center
-          button.btn(ng-show='username', ng-click='listCtrl.myAdj()') My Adjectives
+          button.btn(ng-show='username', ng-click='listCtrl.myWords("adj")') My Adjectives
         |  
         span.h3 Level:
         ul.bubble-select(name='levelSelect')
           li(ng-repeat='lvl in getNumber(60) track by $index', ng-class='{active: $index+1===listCtrl.level}')
-            a(ng-click='listCtrl.displayLevel($index+1)') {{$index+1}}
+            a(ng-click='listCtrl.displayLevel($index+1, "adj")') {{$index+1}}
         .input-group
           span.input-group-addon
             span.glyphicon.glyphicon-search
           |  
-          input.form-control(type='text', placeholder='Search for...', ng-model='listCtrl.searchFor', ng-change='listCtrl.findWord()')
+          input.form-control(type='text', placeholder='Search for...', ng-model='listCtrl.searchFor', ng-change='listCtrl.findWord("adj")')
       .panel-body(ng-show='listCtrl.displayList')
         p {{listCtrl.displayList.length}} Adjectives
-        .word-container.clickable(ng-repeat="entry in listCtrl.displayList | orderBy:'level'", ng-click='listCtrl.openWord(entry.word)', ng-class="{'blue-bg': entry.category==='i-adjective', 'purple-bg': entry.category==='na-adjective'}")
+        .word-container.clickable(ng-repeat="entry in listCtrl.displayList | orderBy:'level'", ng-click='listCtrl.openWord(entry, "adj")', ng-class="{'blue-bg': entry.category==='i-adjective', 'purple-bg': entry.category==='na-adjective'}")
           span.word.clickable(ng-bind='entry.word', lang='ja')
+    
     .screen(ng-show='listCtrl.showWord')
     .pop-up(ng-show='listCtrl.showWord', esc-close-word='')
       span.glyphicon.glyphicon-remove(ng-click='listCtrl.closeWord()', role='button')
@@ -33,7 +32,7 @@ block content
         form.form-inline.text-right
           select.form-control.input-group(ng-model='kan', ng-options='k for k in options.kanji_kana')
         ul.text-center
-          li.meaning.clickable(ng-repeat='meaning in word.meanings', ng-click="setEng(meaning, 'adjList')", ng-class="{'active': meaning === eng}")  {{meaning}}
+          li.meaning.clickable(ng-repeat='meaning in word.meanings', ng-click='setEng(meaning, "adj")', ng-class="{'active': meaning === eng}")  {{meaning}}
         table.table.table-bordered
           tr
             td(colspan='5')
