Modified welcome text.

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -2,11 +2,11 @@ extends layout
 
 block content
   .text-center
-    button.btn(ng-hide='getKey', ng-click='toggleGetKey()')= (username) ? 'Change WaniKani API Key' : 'Add WaniKani API Key'
+    button.btn(ng-hide='getKey', ng-click='toggleGetKey()') {{(username) ? 'Change WaniKani API Key' : 'Add WaniKani API Key'}}
     |  
     a(ng-show='getKey', ng-click='removeUser()') Delete User Info
     |  
-    input.input-lg(ng-show='getKey', type='text', ng-keyup='($event.keyCode===13)?updateUser():null', style='width:32em;', max='32', placeholder='WaniKani User API Key', ng-model='APIkey')
+    input.input-lg(ng-show='getKey', type='text', ng-keyup='($event.keyCode===13)?updateUser():null', style='width:32em;', placeholder='WaniKani User API Key', ng-model='APIkey')
     |  
     button.btn(ng-show='getKey', ng-click='updateUser()') Submit
   .panel
@@ -15,12 +15,12 @@ block content
       h2.text-right(ng-show='username') Hi, {{username}}!
     .panel-body
       p
-        | Welcome to &apos;WaniConjugation&apos;, a site for Japanese language learners to practice conjugating verbs and adjectives. So excite! This collection of 954 verbs and 580 adjectives, their meanings, and their &apos;levels&apos; originates from the Great Crabigator over at 
+        | Welcome to &apos;WaniConjugation&apos;, a site for Japanese language learners to practice conjugating verbs and adjectives. This collection of 955 verbs and 580 adjectives, their meanings, and their &apos;levels&apos; originates from the Great Crabigator over at 
         a(href='https://www.wanikani.com') WaniKani
-        | . As such, this tool is optimized for users of that site (mostly because of the levels thing). If you&apos;re not already a member, what are you waiting for!? Go sign up!
+        | . As such, this tool is optimized for users of that site. If you&apos;re not already a member and are trying to learn Japanese kanji, what are you waiting for? Go sign up!
       p
-        | All conjugations and English translations have been generated via script I wrote. I rely on you, my dutiful users, to point and laugh at my mistakes, and then hopefully let me know so I can fix them.
+        | All conjugations and English translations have been generated via script I wrote. Please let me know if you spot any errors so that I can fix them.
       p
         | You can report errors to 
-        a(href='waniconjugation@gmail.com') waniconjugation@gmail.com
+        a(href='mailto:waniconjugation@gmail.com?Subject=WaniConjugation%20Error%20Report') waniconjugation@gmail.com
         | .
