--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -46,6 +46,5 @@ html(lang='en' ng-app='waniConj')
         img(title="ResponsiveVoice Text To Speech" src="http://responsivevoice.org/wp-content/uploads/2014/08/95x15.png" alt="95x15" width="95" height="15")
       p
         small
-          | Site created by NM Cantrell aka 
-          a(href="https://www.wanikani.com/community/people/nadagio") nadagio
+          | Site created by N Cantrell
       </p>
