--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -41,10 +41,11 @@ html(lang='en' ng-app='waniConj')
             | Translate
     block content
     footer(class="text-center")
-      a(href="http://responsivevoice.org") ResponsiveVoice-NonCommercial licensed under 
+      a(href="http://responsivevoice.org") ResponsiveVoice-NonCommercial licensed under&nbsp;
       a(href="http://creativecommons.org/licenses/by-nc-nd/4.0/")
         img(title="ResponsiveVoice Text To Speech" src="http://responsivevoice.org/wp-content/uploads/2014/08/95x15.png" alt="95x15" width="95" height="15")
       p
         small
-          | Site created by N Cantrell
+          | Site created by N Cantrell. Open source&nbsp;
+          a(href="https://github.com/cantrellnm/waniconjugation") on Github.
       </p>
