Fix kanji used for 'conjugation' (thanks jay)

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -3,7 +3,7 @@ html(lang='en' ng-app='waniConj')
   head
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    title 鰐共役 「WaniConjugation
+    title 鰐活用 「WaniConjugation
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
     link(rel='stylesheet' href='/css/styles.css')
     link(rel='icon' href='')
@@ -16,7 +16,7 @@ html(lang='en' ng-app='waniConj')
   body(ng-controller='AppController as ctrl')
     header
       a(class="h2 brand" class="active" href="/")
-        span(lang="ja") 鰐共役
+        span(lang="ja") 鰐活用
         | 「WaniConjugation」
       p a companion tool for users of
         a(href="https://www.wanikani.com/") WaniKani
@@ -33,7 +33,7 @@ html(lang='en' ng-app='waniConj')
       ul(class="nav navbar-nav navbar-right")
         li
           a(href="/conjugate")
-            span(lang="ja") 共役
+            span(lang="ja") 活用
             | Conjugate
         li
           a(href="/translate")
