Redirect to https on production, link to ko-fi, add analytics

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -15,12 +15,10 @@ block content
       h2.text-right(ng-show='username') Hi, {{username}}!
     .panel-body
       p
-        | Welcome to &apos;WaniConjugation&apos;, a site for Japanese language learners to practice conjugating verbs and adjectives. This collection of 955 verbs and 580 adjectives, their meanings, and their &apos;levels&apos; originates from the Great Crabigator over at
-        a(href='https://www.wanikani.com') WaniKani
+        | Welcome to &apos;WaniConjugation&apos;, a site for Japanese language learners to practice conjugating verbs and adjectives. This collection of 955 verbs and 580 adjectives, their meanings, and their &apos;levels&apos; originates from the Great Crabigator over at&nbsp;
+        a(href='https://www.wanikani.com' target='_blank') WaniKani
         | . As such, this tool is optimized for users of that site. If you&apos;re not already a member and are trying to learn Japanese kanji, what are you waiting for? Go sign up!
       p
-        | All conjugations and English translations have been generated via script I wrote. Please let me know if you spot any errors so that I can fix them.
-      p
-        | If you run into problems, you can open an issue 
-        a(href='https://github.com/cantrellnm/waniconjugation/issues') on GitHub
-        | . (Account needed.) Pull requests welcome.
+        | All conjugations and English translations have been generated via script I wrote. Please let me know if you spot any mistakes so that I can fix them. To report errors you can open an issue&nbsp;
+        a(href='https://github.com/cantrellnm/waniconjugation/issues' target='_blank') on GitHub
+        | . (Account needed.) Pull requests from other developers to improve the site are welcome.
